[metadata]
name = sphinxcontrib-programoutput2
provides =
  sphinxcontrib.programoutput
url = https://sphinxcontrib-programoutput2.readthedocs.org/
project_urls =
  Bug Tracker = https://github.com/sphinx-contrib/sphinxcontrib-programoutput/issues
  CI: GitHub = https://github.com/sphinx-contrib/sphinxcontrib-programoutput/actions?query=workflow:gh+branch:master+event:push
  Documentation = https://sphinxcontrib-programoutput2.readthedocs.org/
  Source Code = https://github.com/sphinx-contrib/sphinxcontrib-programoutput
description = Sphinx extension to include program output
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Wiesner
author_email = lunaryorn@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Utilities
    Framework :: Sphinx
    Framework :: Sphinx :: Extension

keywords =
  sphinx
  cli
  command
  output
  program
  example

[files]
namespace_packages =
    sphinxcontrib
packages =
    sphinxcontrib.programoutput
# data_files =
#    share/docs = docs/*

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find_namespace:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    Sphinx>=1.7.0

# https://github.com/pypa/setuptools/issues/2406
# Note: presence of older __init__.py inside the namespace root breaks the
# find.
[options.packages.find]
where = src

[options.extras_require]
test =
  mock
  pytest

[aliases]
release = egg_info -RDb ''

[upload_docs]
upload_dir = build/sphinx/html

[flake8]
max-line-length = 88
# E203: https://github.com/python/black/issues/315
ignore = E203

[tool:pytest]
# We need this because tests are parts of the package and their final location
# may or may bot be local (editable or non-editable install).
addopts = --pyargs sphinxcontrib.programoutput
